--- a/Hook_x32Dll/BasicHookDLL/BasicHookDLL.vcxproj.filters
+++ b/Hook_x32Dll/BasicHookDLL/BasicHookDLL.vcxproj.filters
@@ -24,11 +24,20 @@
     <ClCompile Include="disassembler\hde64.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileHandle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CryptoFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WinsockFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="hook.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="disassembler\hde32.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -40,6 +49,21 @@
     </ClInclude>
     <ClInclude Include="disassembler\table64.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileHandle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CryptoFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WinsockFunctions.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
